--- a/config/database.yml
+++ b/config/database.yml
@@ -14,17 +14,21 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-default: &default
-  adapter: postgresql
-  encoding: unicode
-  # For details on connection pooling, see rails configuration guide
-  # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#default: &default
+#  adapter: postgresql
+#  encoding: unicode
+#  # For details on connection pooling, see rails configuration guide
+#  # http://guides.rubyonrails.org/configuring.html#database-pooling
+#  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#
+#development:
+#  <<: *default
+#  username: abp
+#  password: docker
+#  database: finance_development
 
 development:
-  <<: *default
-  username: abp
-  database: finance_development
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_development?') %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,8 +61,10 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: finance_test
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_test?') %>
+
+staging:
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_staging?') %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,7 +86,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: finance_prod
-  username: abp
-  password: <%= ENV['FINANCE-RAILS5_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'].gsub('?', '_production?') %>
