improve download financials by using the filing release table

--- a/config/database.yml
+++ b/config/database.yml
@@ -29,6 +29,7 @@
 
 development:
   url: <%= ENV['DATABASE_URL'].gsub('?', '_development?') %>
+  pool: 15
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
